// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Contract v1 — capture engine output (goldens) algorithm (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "algorithm"
      ],
      "form": "algorithm",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-O-I"
    }
  ],
  "deepRoot": {
    "basis": "algorithm",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "algorithm",
    "math7": {
      "indices": [
        0,
        3,
        2
      ],
      "sum": 5,
      "totalMod7": 5,
      "vowels": [
        "A",
        "O",
        "I"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "A-O-I",
    "surfaceVowels": [
      "A",
      "O",
      "I"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "algorithm",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "algorithm"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) damage (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "damage"
      ],
      "form": "damage",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-A-E"
    }
  ],
  "deepRoot": {
    "basis": "damage",
    "candidates": [
      {
        "basis": "damage",
        "carriers": [
          {
            "carrierForm": "da",
            "lang": "sq",
            "ops": [],
            "protoRootId": "DA",
            "segment": "da"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "DA"
        },
        "id": "damage:DA:0",
        "opsCount": 0,
        "protoRoots": [
          "DA"
        ],
        "segments": [
          "da"
        ]
      }
    ],
    "functionalRoots": [
      {
        "gloss": "Functional reading: dëm (harm / loss / injury) as a minimal carrier for the damage concept.",
        "id": "sq.dem.v1",
        "language": "sq",
        "notes": [
          "english surface → sq carrier (short form)",
          "note: this is a minimal-root hypothesis, not a historical-chain claim",
          "Deterministic pilot hypothesis (v1.1).",
          "No winner; functional carrier only."
        ],
        "opsUsed": [],
        "roots": [
          "dëm"
        ],
        "surfaceForms": [
          "damage",
          "dëm"
        ],
        "vowelPath": "A→Ë"
      }
    ],
    "hypotheses": [
      {
        "basis": "damage",
        "carriers": [
          {
            "carrierForm": "da",
            "lang": "sq",
            "ops": [],
            "protoRootId": "DA",
            "segment": "da"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "DA"
        },
        "id": "damage:DA:0",
        "opsCount": 0,
        "protoRoots": [
          "DA"
        ],
        "segments": [
          "da"
        ]
      }
    ],
    "protoRoots": [
      "DA"
    ],
    "rootFamilies": [
      {
        "carriers": [],
        "id": "family_da_v1_1",
        "label": "DA",
        "protoRoots": [
          {
            "root": "DA"
          }
        ]
      }
    ],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "damage",
    "math7": {
      "indices": [
        0,
        0,
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "A",
        "A",
        "E"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "A-A-E",
    "surfaceVowels": [
      "A",
      "A",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "damage",
  "rootMap": {
    "carriers": [
      {
        "carrierForm": "daj",
        "language": "sq",
        "note": "gloss: split / divide",
        "token": "DA"
      },
      {
        "carrierForm": "ndaj",
        "language": "sq",
        "note": "gloss: divide / share",
        "token": "DA"
      },
      {
        "carrierForm": "ndarë",
        "language": "sq",
        "note": "gloss: divided",
        "token": "DA"
      }
    ],
    "composedMeaning": "split / divide / cut / separate",
    "keys": [
      {
        "evidence": [
          "sq: da",
          "gloss: split / divide / cut",
          "note: direct reviewed Gheg free-operator evidence; Dedvukaj & Ndoci 2023 PLSA example (4), DOI 10.3765/plsa.v8i1.5501",
          "reviewed functional free-operator evidence: Dedvukaj & Ndoci 2023 PLSA, Example (4), page 3; footnote 1: da = to split, cut, divide. https://doi.org/10.3765/plsa.v8i1.5501; historicalOriginClaim=not_claimed; winnerClaim=not_claimed; languageSuperiorityClaim=not_claimed; userDecisionPosture=user_decides"
        ],
        "gloss": "split / divide / cut / separate",
        "language": "sq",
        "ops": null,
        "status": "supported",
        "token": "DA"
      }
    ],
    "notes": null,
    "spans": [
      {
        "end": 2,
        "note": "segment=da",
        "source": "surface",
        "start": 0,
        "token": "DA"
      }
    ],
    "tokens": [
      {
        "role": "action",
        "token": "DA",
        "vowel_path": "A"
      }
    ]
  },
  "warnings": null,
  "word": "damage"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) father (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "father"
      ],
      "form": "father",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E"
    }
  ],
  "deepRoot": {
    "basis": "father",
    "candidates": [
      {
        "basis": "father",
        "carriers": [
          {
            "carrierForm": "at",
            "lang": "sq",
            "ops": [],
            "protoRootId": "AT",
            "segment": "at"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "unit": "AT"
        },
        "id": "father:AT:0",
        "opsCount": 0,
        "protoRoots": [
          "AT"
        ],
        "segments": [
          "at"
        ]
      }
    ],
    "functionalRoots": [
      {
        "gloss": "Functional root AT / PAT: origin, projection, source of lineage and authority.",
        "id": "proto.at.pat.v1",
        "language": "proto",
        "notes": [
          "surface → proto carrier",
          "no winner; family-level functional root",
          "Proto functional family (non-historical claim).",
          "Carrier across IE and Albanian."
        ],
        "opsUsed": [],
        "roots": [
          "AT",
          "PAT"
        ],
        "surfaceForms": [
          "father",
          "pater",
          "atë"
        ],
        "vowelPath": "A→Ë"
      }
    ],
    "hypotheses": [
      {
        "basis": "father",
        "carriers": [
          {
            "carrierForm": "at",
            "lang": "sq",
            "ops": [],
            "protoRootId": "AT",
            "segment": "at"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "unit": "AT"
        },
        "id": "father:AT:0",
        "opsCount": 0,
        "protoRoots": [
          "AT"
        ],
        "segments": [
          "at"
        ]
      }
    ],
    "protoRoots": [
      "AT"
    ],
    "rootFamilies": [
      {
        "carriers": [],
        "id": "family_at_v1_1",
        "label": "AT",
        "protoRoots": [
          {
            "root": "AT"
          }
        ]
      }
    ],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "father",
    "math7": {
      "indices": [
        0,
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "A",
        "E"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "A-E",
    "surfaceVowels": [
      "A",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "father",
  "rootMap": {
    "carriers": [
      {
        "carrierForm": "atë",
        "language": "sq",
        "note": "gloss: father",
        "token": "AT"
      },
      {
        "carrierForm": "ati",
        "language": "sq",
        "note": "gloss: the father (def/older form)",
        "token": "AT"
      },
      {
        "carrierForm": "pater",
        "language": "la",
        "note": "gloss: father (non-minimal carrier; reference only)",
        "token": "AT"
      }
    ],
    "composedMeaning": "father / progenitor marker",
    "keys": [
      {
        "evidence": [
          "sq: at",
          "gloss: father",
          "reviewed functional free-operator evidence: Bardhyl Demiraj; database revised by Alexander Lubotsky and Michiel de Vaan, Demiraj 1997; database compiled 1998-1999; accessed 2026-08-16, The Albanian inherited lexicon, at [m] (tg) {2} 'father'; Alb. atë [m] (tg) 'father' (AE 83): at = father. https://ieed.ullet.net/alb.html; historicalOriginClaim=not_claimed; winnerClaim=not_claimed; languageSuperiorityClaim=not_claimed; userDecisionPosture=user_decides"
        ],
        "gloss": "father / progenitor marker",
        "language": "sq",
        "ops": null,
        "status": "supported",
        "token": "AT"
      }
    ],
    "notes": null,
    "spans": [
      {
        "end": 3,
        "note": "segment=at",
        "source": "surface",
        "start": 1,
        "token": "AT"
      }
    ],
    "tokens": [
      {
        "role": "unit",
        "token": "AT",
        "vowel_path": "A"
      }
    ]
  },
  "warnings": null,
  "word": "father"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) gjak (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "gjak"
      ],
      "form": "gjak",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A"
    }
  ],
  "deepRoot": {
    "basis": "gjak",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "gjak",
    "math7": {
      "indices": [
        0
      ],
      "sum": 0,
      "totalMod7": 0,
      "vowels": [
        "A"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "A",
    "surfaceVowels": [
      "A"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "gjak",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "gjak"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) internet (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "internet"
      ],
      "form": "internet",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "I-E-E"
    }
  ],
  "deepRoot": {
    "basis": "internet",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "internet",
    "math7": {
      "indices": [
        2,
        1,
        1
      ],
      "sum": 4,
      "totalMod7": 4,
      "vowels": [
        "I",
        "E",
        "E"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "I-E-E",
    "surfaceVowels": [
      "I",
      "E",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "internet",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "internet"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) love (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "love"
      ],
      "form": "love",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "O-E"
    }
  ],
  "deepRoot": {
    "basis": "love",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "love",
    "math7": {
      "indices": [
        3,
        1
      ],
      "sum": 4,
      "totalMod7": 4,
      "vowels": [
        "O",
        "E"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "O-E",
    "surfaceVowels": [
      "O",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "love",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "love"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) mathematics (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "mathematics"
      ],
      "form": "mathematics",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E-A-I"
    }
  ],
  "deepRoot": {
    "basis": "mathematics",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "mathematics",
    "math7": {
      "indices": [
        0,
        1,
        0,
        2
      ],
      "sum": 3,
      "totalMod7": 3,
      "vowels": [
        "A",
        "E",
        "A",
        "I"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "A-E-A-I",
    "surfaceVowels": [
      "A",
      "E",
      "A",
      "I"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "mathematics",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "mathematics"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) philosophy (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "philosophy"
      ],
      "form": "philosophy",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "I-O-O-Y"
    }
  ],
  "deepRoot": {
    "basis": "philosophy",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "philosophy",
    "math7": {
      "indices": [
        2,
        3,
        3,
        5
      ],
      "sum": 13,
      "totalMod7": 6,
      "vowels": [
        "I",
        "O",
        "O",
        "Y"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "I-O-O-Y",
    "surfaceVowels": [
      "I",
      "O",
      "O",
      "Y"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "philosophy",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "philosophy"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) shter (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "shter"
      ],
      "form": "shter",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "E"
    }
  ],
  "deepRoot": {
    "basis": "shter",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "shter",
    "math7": {
      "indices": [
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "E"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "E",
    "surfaceVowels": [
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "shter",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "shter"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) study (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "study"
      ],
      "form": "study",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "U-Y"
    }
  ],
  "deepRoot": {
    "basis": "study",
    "candidates": [
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "stu",
            "lang": "en",
            "ops": [
              "exact"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "da",
            "lang": "sq",
            "ops": [
              "vowel_swap"
            ],
            "protoRootId": "DA",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU"
        },
        "id": "study:SHTU+DA:0",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DA"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      },
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "stu",
            "lang": "en",
            "ops": [
              "exact"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "di",
            "lang": "sq",
            "ops": [
              "y_to_i"
            ],
            "protoRootId": "DI",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU",
          "function": "DI"
        },
        "id": "study:SHTU+DI:1",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DI"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      },
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "shtu",
            "lang": "sq",
            "ops": [
              "s_to_sh"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "da",
            "lang": "sq",
            "ops": [
              "vowel_swap"
            ],
            "protoRootId": "DA",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU"
        },
        "id": "study:SHTU+DA:2",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DA"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      },
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "shtu",
            "lang": "sq",
            "ops": [
              "s_to_sh"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "di",
            "lang": "sq",
            "ops": [
              "y_to_i"
            ],
            "protoRootId": "DI",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU",
          "function": "DI"
        },
        "id": "study:SHTU+DI:3",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DI"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      }
    ],
    "functionalRoots": [
      {
        "gloss": "Functional reading: shtu (not yours / added-on) + di (know) → making knowledge yours through learning.",
        "id": "sq.shtu+di.v1",
        "language": "sq",
        "notes": [
          "english carrier → sq functional reading",
          "note: studim treated as nominal closure of the same carrier family",
          "Deterministic pilot hypothesis (v1).",
          "No historical-chain claim; functional decomposition only."
        ],
        "opsUsed": [
          "s_to_sh",
          "y_to_i"
        ],
        "plainFunctionalExplanation": "Adding or increasing knowledge; making knowledge yours through learning.",
        "roots": [
          "shtu",
          "di"
        ],
        "surfaceForms": [
          "study",
          "studim"
        ],
        "vowelPath": "U→I"
      }
    ],
    "hypotheses": [
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "stu",
            "lang": "en",
            "ops": [
              "exact"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "da",
            "lang": "sq",
            "ops": [
              "vowel_swap"
            ],
            "protoRootId": "DA",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU"
        },
        "id": "study:SHTU+DA:0",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DA"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      },
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "stu",
            "lang": "en",
            "ops": [
              "exact"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "di",
            "lang": "sq",
            "ops": [
              "y_to_i"
            ],
            "protoRootId": "DI",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU",
          "function": "DI"
        },
        "id": "study:SHTU+DI:1",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DI"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      },
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "shtu",
            "lang": "sq",
            "ops": [
              "s_to_sh"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "da",
            "lang": "sq",
            "ops": [
              "vowel_swap"
            ],
            "protoRootId": "DA",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU"
        },
        "id": "study:SHTU+DA:2",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DA"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      },
      {
        "basis": "study",
        "carriers": [
          {
            "carrierForm": "shtu",
            "lang": "sq",
            "ops": [
              "s_to_sh"
            ],
            "protoRootId": "SHTU",
            "segment": "stu"
          },
          {
            "carrierForm": "di",
            "lang": "sq",
            "ops": [
              "y_to_i"
            ],
            "protoRootId": "DI",
            "segment": "dy"
          }
        ],
        "checks": {
          "opsWithinLimits": true,
          "skeletonExplained": true
        },
        "decomposition": {
          "action": "SHTU",
          "function": "DI"
        },
        "id": "study:SHTU+DI:3",
        "opsCount": 2,
        "protoRoots": [
          "SHTU",
          "DI"
        ],
        "segments": [
          "stu",
          "dy"
        ]
      }
    ],
    "protoRoots": [
      "SHTU",
      "DA",
      "DI"
    ],
    "rootFamilies": [
      {
        "carriers": [],
        "id": "family_shtu_da_v1_1",
        "label": "SHTU + DA",
        "protoRoots": [
          {
            "root": "SHTU"
          },
          {
            "root": "DA"
          }
        ]
      },
      {
        "carriers": [],
        "id": "family_shtu_di_v1_2",
        "label": "SHTU + DI",
        "protoRoots": [
          {
            "root": "SHTU"
          },
          {
            "root": "DI"
          }
        ]
      }
    ],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "study",
    "math7": {
      "indices": [
        4,
        5
      ],
      "sum": 9,
      "totalMod7": 2,
      "vowels": [
        "U",
        "Y"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "U-Y",
    "surfaceVowels": [
      "U",
      "Y"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "study",
  "rootMap": {
    "carriers": [
      {
        "carrierForm": "shtu",
        "language": "sq",
        "note": "gloss: add / increased",
        "token": "SHTU"
      },
      {
        "carrierForm": "shtoj",
        "language": "sq",
        "note": "gloss: to add",
        "token": "SHTU"
      },
      {
        "carrierForm": "shtim",
        "language": "sq",
        "note": "gloss: addition / increase",
        "token": "SHTU"
      },
      {
        "carrierForm": "shtue",
        "language": "sq",
        "note": "gloss: added (participle)",
        "token": "SHTU"
      },
      {
        "carrierForm": "daj",
        "language": "sq",
        "note": "gloss: split / divide",
        "token": "DA"
      },
      {
        "carrierForm": "ndaj",
        "language": "sq",
        "note": "gloss: divide / share",
        "token": "DA"
      },
      {
        "carrierForm": "ndarë",
        "language": "sq",
        "note": "gloss: divided",
        "token": "DA"
      }
    ],
    "composedMeaning": "add / increase / put-on + split / divide / cut / separate",
    "keys": [
      {
        "evidence": [
          "en: stu",
          "ops: exact",
          "gloss: surface segment carrier (study)"
        ],
        "gloss": "add / increase / put-on",
        "language": "en",
        "ops": [
          "exact"
        ],
        "status": "supported",
        "token": "SHTU"
      },
      {
        "evidence": [
          "sq: da",
          "ops: vowel_swap",
          "gloss: split / divide / cut"
        ],
        "gloss": "split / divide / cut / separate",
        "language": "sq",
        "ops": [
          "vowel_swap"
        ],
        "status": "dialect_attested_pending_review",
        "token": "DA"
      }
    ],
    "notes": null,
    "spans": [
      {
        "end": 3,
        "note": "segment=stu",
        "source": "surface",
        "start": 0,
        "token": "SHTU"
      },
      {
        "end": 5,
        "note": "segment=dy",
        "source": "surface",
        "start": 3,
        "token": "DA"
      }
    ],
    "tokens": [
      {
        "role": "action",
        "token": "SHTU",
        "vowel_path": "U"
      },
      {
        "role": "action",
        "token": "DA",
        "vowel_path": "A"
      }
    ]
  },
  "warnings": null,
  "word": "study"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) zemër (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "zemër"
      ],
      "form": "zemër",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "E-Ë"
    }
  ],
  "deepRoot": {
    "basis": "zemër",
    "candidates": [],
    "hypotheses": [],
    "protoRoots": [],
    "version": "deeproot-output-v1"
  },
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "zemër",
    "math7": {
      "indices": [
        1,
        6
      ],
      "sum": 7,
      "totalMod7": 0,
      "vowels": [
        "E",
        "Ë"
      ]
    },
    "normalizationSteps": [],
    "notes": [],
    "ops": [],
    "signals": [
      "EVIDENCE_V1"
    ],
    "surfacePath": "E-Ë",
    "surfaceVowels": [
      "E",
      "Ë"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "zemër",
  "rootMap": {
    "composedMeaning": "",
    "keys": [],
    "notes": [
      "No minRoots hypotheses available; RootMap not emitted."
    ],
    "tokens": []
  },
  "warnings": null,
  "word": "zemër"
}"
`;
